--- a/index.ipynb
+++ b/index.ipynb
@@ -1384,7 +1384,7 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    \n",
+    "    list(map(lambda y: distance_with_neighbor(first_neighbor, y), remaining_neigh))\n",
     "    pass"
    ]
   },
