Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1384,7 +1384,7 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    list(map(lambda z: distance_with_neighbor(first_neighbor, z), neigh))\n",
+    "    list(map(lambda z: distance_with_neighbor(first_neighbor, z), neighbors))\n",
     "    pass"
    ]
   },
