--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1382,8 +1382,7 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    list(map(lambda z: distance_with_neighbor(first_neighbor, z), neighbors))\n",
-    "    \n",
+    "    retu list(map(lambda z: distance_with_neighbor(first_neighbor, z), neighbors))\n",
     "    pass"
    ]
   },
