Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1383,7 +1383,8 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    a = list(map(lambda z: distance_with_neighbor(first_neighbor, z), neighbors))\n",
-    "    if number == True\n",
+    "    if number == True:\n",
+    "        len(a) == number\n",
     "    pass"
    ]
   },
