--- a/index.ipynb
+++ b/index.ipynb
@@ -1385,7 +1385,7 @@
     "    a = list(map(lambda z: distance_with_neighbor(first_neighbor, z), neighbors))\n",
     "    if number == True:\n",
     "        len(a) == number\n",
-    "    b = sorted(a)\n",
+    "    b = sorted(a['d'])\n",
     "    return b\n",
     "    pass"
    ]
