Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1382,11 +1382,7 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    a = list(map(lambda z: distance_with_neighbor(first_neighbor, z), neighbors))\n",
-    "    if number == True:\n",
-    "        len(a) == number\n",
-    "    b = sorted(a)\n",
-    "    return b\n",
+    "    distancesfinal = distance_all()\n",
     "    pass"
    ]
   },
