Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1382,7 +1382,7 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    distancesfinal = distance_all()\n",
+    "    distancesfinal = distance_all(first_neighbor, neighbor)\n",
     "    pass"
    ]
   },
