--- a/index.ipynb
+++ b/index.ipynb
@@ -1382,7 +1382,7 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    number = lor len(neighbors)-1\n",
+    "    number = number or len(neighbors)-1\n",
     "    distancesfinal = distance_all(first_neighbor, neighbor)\n",
     "    pass"
    ]
