Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1384,7 +1384,7 @@
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    number = number or len(neighbors)-1\n",
     "    distancesfinal = distance_all(first_neighbor, neighbor)\n",
-    "    thesort = sorted(neigh)\n",
+    "    thesort = sorted(d\n",
     "    pass"
    ]
   },
